Updated Breadboard to use sparks.js

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
   "name": "teaching-teamwork",
   "version": "0.0.1",
   "dependencies": {
-    "breadboard": "file:///Users/sfentress/projects/breadboard/.git/"
+    "breadboard": "C:\\xampp\\htdocs\\breadboard\\.git"
   }
 }
