Fix breadboard dependency in bower

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
   "name": "teaching-teamwork",
   "version": "0.0.1",
   "dependencies": {
-    "breadboard": "C:\\xampp\\htdocs\\breadboard\\.git"
+    "breadboard": "0.0.1"
   }
 }
