--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "scripts": {
     "prestart": "./node_modules/gulp/bin/gulp.js",
-    "start": ""
+    "start": "",
+    "predeploy": "rm -rf dist && ./node_modules/gulp/bin/gulp.js build-all",
+    "deploy": "./deploy.sh gh-pages",
+    "test": "cd test; karma start"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
